--- a/Extras.scss
+++ b/Extras.scss
@@ -21,7 +21,7 @@ $colors:$warning,$primary,$success,$danger;
 .column-lg-none{
     display:none;
 }
-
+/*
 .offset-1{
     margin-left:percentage(1/12);
 }
@@ -29,7 +29,7 @@ $colors:$warning,$primary,$success,$danger;
     margin-left: percentage(1/24);
 
 }
-
+*/
 .btn{
     border-radius:5px;
     background-color:white;
